# csc299-project

./: main.py  pyproject.toml  tasks.json
final_project/: README.md  SUMMARY.md  vid.txt
final_project/src/: cli.py
final_project/src/agents/: assistant_manager.py  conversation_memory.py
final_project/src/notes/: manager.py  summarizer.py
final_project/src/tasks/: manager.py  summarizer.py
final_project/tests/: test_agents.py  test_notes.py  test_tasks.py
tasks1/: .gitignore  ReadMe.md  cli.py  main.py  tasks.py
tasks1/data/: habits.json
tasks2/: cli.py  tasks.py
tasks2/data/: habits.json
tasks3/: __main__.py  cli.py  tasks.py
tasks3/data/: habits.json
tasks3/src/: cli.py  main.py  tasks.py
tasks3/tests/: test_tasks.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py  main.py
