[project]
name = "tasks3"
version = "0.1.0"
description = "Task manager CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.0",
]

[project.scripts]
tasks3 = "tasks3.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "tasks4",
]
