[project]
name = "tasks4"
version = "0.1.0"
description = "Standalone experiment to summarize tasks using OpenAI Chat Completions API"
readme = "README.md"
authors = [
    { name = "saamiya059", email = "saamiya1590@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.0",
]

[project.scripts]
tasks4 = "tasks4.main:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

